# TopiCo

topico/: CMakeLists.txt
topico/src/: topico_python_bindings.cpp
topico/test/: test.py
